--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.5/socket.io.js" integrity="sha512-2rUSTSAeOO02jF6eBqENNqPs1EohenJ5j+1dgDPdXSLz9nOlrr8DJk4zW/lDy8rjhGCSonW3Gx812XJQIKZKJQ==" crossorigin="anonymous"></script>
     <script>
         
-        // const socket = io('https://sm-cr.herokuapp.com/');
-        const socket = io('http://localhost:8080/');
+        const socket = io('https://sm-cr.herokuapp.com/');
+        //const socket = io('http://localhost:8080/');
 
         
         // Referencias al DOM
